feat: configurar estrutura de settings Django e type checking
- Criar estrutura config/settings/ com base.py, dev.py e prod.py
- Configurar base.py com todas as configurações comuns:
  * PostgreSQL, JWT, CORS, DRF, Channels, Celery
  * Sentry, Logging, Segurança, Email
- Configurar dev.py para desenvolvimento (DEBUG, CORS permissivo, etc)
- Configurar prod.py para produção (segurança, cache, otimizações)
- Criar config/urls.py com rotas principais e Swagger/Redoc
- Atualizar manage.py, wsgi.py, asgi.py para usar novas settings
- Atualizar .env.example com nomes corretos (proposify_db, proposify_user)
- Configurar pyrightconfig.json para type checking
- Adicionar label customizado em api.admin para evitar conflito
- Adicionar comentários para silenciar avisos de linter em settings
- Atualizar todo.md marcando tarefas concluídas

--- a/.env.example
+++ b/.env.example
@@ -4,8 +4,8 @@ DEBUG=True
 ALLOWED_HOSTS=localhost,127.0.0.1
 
 # Database (PostgreSQL)
-DB_NAME=marketplace_db
-DB_USER=marketplace_user
+DB_NAME=proposify_db
+DB_USER=proposify_user
 DB_PASSWORD=marketplace_password
 DB_HOST=localhost
 DB_PORT=5432
@@ -16,10 +16,11 @@ REDIS_URL=redis://localhost:6379/0
 # Celery
 CELERY_BROKER_URL=redis://localhost:6379/0
 CELERY_RESULT_BACKEND=redis://localhost:6379/0
+CELERY_TASK_ALWAYS_EAGER=True
 
 # JWT Settings
-JWT_ACCESS_TOKEN_LIFETIME=15  # minutes
-JWT_REFRESH_TOKEN_LIFETIME=7  # days
+JWT_ACCESS_TOKEN_LIFETIME=15
+JWT_REFRESH_TOKEN_LIFETIME=7
 
 # Email Settings (for django-anymail)
 EMAIL_BACKEND=anymail.backends.mailgun.EmailBackend
@@ -36,6 +37,7 @@ FCM_SERVER_KEY=your-fcm-server-key
 
 # CORS Settings
 CORS_ALLOWED_ORIGINS=http://localhost:3000,http://localhost:8000
+CORS_ALLOW_ALL_ORIGINS=True
 
 # Media Files
 MEDIA_ROOT=/path/to/media
