--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,23 @@ ignore_missing_imports = false
 django_settings_module = "marketplace.settings"
 
 [tool.pyright]
-include = ["api", "marketplace"]
+include = ["api", "marketplace", "config"]
 exclude = ["**/__pycache__", "**/migrations", "venv"]
 reportMissingImports = true
 reportMissingTypeStubs = false
 pythonVersion = "3.14"
 typeCheckingMode = "basic"
+reportGeneralTypeIssues = false
+
+[tool.flake8]
+max-line-length = 158
+extend-ignore = ["E203", "W503"]
+
+[tool.black]
+line-length = 158
+target-version = ["py314"]
+
+[tool.isort]
+profile = "black"
+line_length = 158
 
